--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-less2js",
   "description": "Convert some variables.less to JSON to be used in Javascript",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://github.com/ixrock/grunt-less2js",
   "author": {
     "name": "Roman Karlov",
@@ -26,15 +26,18 @@
   "scripts": {
     "test": "grunt test"
   },
+  "dependencies": {
+    "less": "^1.7.3"
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-nodeunit": "^0.3.3",
-    "less": "^1.7.3"
+    "grunt-contrib-nodeunit": "^0.3.3"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.5",
+    "less": "^1.7.3"
   },
   "keywords": [
     "gruntplugin", "less", "css", "json", "angular-js"
